--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.unity.webrtc",
   "displayName": "WebRTC",
-  "version": "2.0.0-preview.3",
+  "version": "2.0.1-preview",
   "unity": "2019.3",
-  "description": "***\nWarning: So this version is in development, please do not use it. The latest version is 1.1.2.\n***\n\nThe WebRTC package provides browsers and mobile applications with Real-Time Communications (RTC) capabilities.",
+  "description": "The WebRTC package provides browsers and mobile applications with Real-Time Communications (RTC) capabilities.",
   "keywords": [
     "webrtc",
     "web"
@@ -15,10 +15,12 @@
       "path": "Samples~"
     }
   ],
+  "upmCi": {
+    "footprint": "2c7e0ad4ed17f9dfd617c3615c51b20152aaccd2"
+  },
   "repository": {
-    "footprint": "d9a4ae51c1c4eb5f65135c3e1f54507718579008",
     "type": "git",
     "url": "https://github.com/Unity-Technologies/com.unity.webrtc.git",
-    "revision": "94406abcc7f49613538a925cb4f799fbf5f1ce0f"
+    "revision": "82de894da0e0be46bd94ae3a127da506c429adb3"
   }
 }
