--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unity.webrtc",
   "displayName": "WebRTC",
-  "version": "2.1.0-preview.4",
+  "version": "2.1.1-preview",
   "unity": "2019.4",
   "description": "The WebRTC package provides browsers and mobile applications with Real-Time Communications (RTC) capabilities.",
   "keywords": [
@@ -19,11 +19,11 @@
     }
   ],
   "upmCi": {
-    "footprint": "6e194dde8ffcb43ab3932139b17de558499b101a"
+    "footprint": "d2b5f1ebfe0510ecd2400f7334e7736ef43e6a63"
   },
   "repository": {
     "url": "https://github.com/Unity-Technologies/com.unity.webrtc.git",
     "type": "git",
-    "revision": "5e30a0fa00e934c93eed4ec7512b6c75d745a309"
+    "revision": "8424efe115374db5e7e4322ab9da46e43ebcff36"
   }
 }
