com.unity.webrtc@2.3.0-preview ## [2.3.0] - 2020-12-28
### Added

- iOS platform support
- H.264 HW decoder (VideoToolbox) support on macOS
- Added `GetCapabilities` method to the `RTCRtpSender` class and the `RTCRtpReceiver` class
- Added `SetCodecPreferences` method to the `RTCRtpTransceiver` class.
- Added two samples (`ChangeCodecs`, `TrickleIce`)
- Added properties to the `RTCIceCandidate` class
- Added properties tp the `RTCDataChannelInit` class

### Changed

- Changed `RTCIceCandidate` type from `struct` to `class`
- Changed `RTCIceCandidateInit` type from `struct` to `class`
- Changed `RTCDataChannelInit` type from `struct` to `class`
- Changed argumments of the `RTCPeerConnection.AddIceCandidate` method
```csharp
// old
public void AddIceCandidate(ref RTCIceCandidate candidate);
// new
public bool AddIceCandidate(RTCIceCandidate candidate);
```

- Changed arguments of the `RTCPeerConnection.CreateDataChannel` method
```csharp
// old
public RTCDataChannel CreateDataChannel(string label, ref RTCDataChannelInit options);
// new
public RTCDataChannel CreateDataChannel(string label RTCDataChannelInit options = null);
```

## [2.2.1] - 2020-11-13

### Added

- Added a `Bandwidth` sample

### Fixed

- Fixed the receiver of video streaming with Vulkan API
- Fixed a crash bug when the application ended using Vulkan API
- Fixed a crash bug of the standalone build using Vulkan API
- Fixed bugs that occur on Linux not installed NVIDIA driver
- Fixed a bug of the `VideoReceive` sample

--- a/Runtime/Unity.WebRTC.Runtime.asmdef
+++ b/Runtime/Unity.WebRTC.Runtime.asmdef
@@ -3,6 +3,7 @@
     "references": [],
     "includePlatforms": [
         "Editor",
+        "iOS",
         "LinuxStandalone64",
         "macOSStandalone",
         "WindowsStandalone64"
