--- a/Tests/Runtime/Unity.WebRTC.RuntimeTests.asmdef
+++ b/Tests/Runtime/Unity.WebRTC.RuntimeTests.asmdef
@@ -7,6 +7,7 @@
     ],
     "includePlatforms": [
         "Editor",
+        "iOS",
         "LinuxStandalone64",
         "macOSStandalone",
         "WindowsStandalone64"
