com.unity.webrtc@2.4.0-exp.1 ## [2.4.0-exp.1] - 2021-04-23
### Added

- Android ARM64 platform support
- Added a sample scene "Menu" which developers can go back and forth between sample scenes
- Added a sample scene "PerfectNegotiation"
- Added the software encoder on Linux support when using OpenGL Core graphics API
- Added the `RestartIce` method to the `RTCPeerConnection` class
- Added the `Streams` property to the `RTCRtpReceiver` class

### Changed

- Unity 2020.3 support
- Upgrade libwebrtc [m89](https://groups.google.com/g/discuss-webrtc/c/Zrsn2hi8FV0/m/KIbn0EZPBQAJ)
- Changed the argument type of the `RTCPeerConnection.CreateOffer` method and the `RTCPeerConnection.CreateAnswer` method

### Fixed

- Fixed crash for accessing properties of `RTCDataChannel` instance
- Fixed crash when using the invalid graphics format to stream video on macOS

--- a/Runtime/Unity.WebRTC.Runtime.asmdef
+++ b/Runtime/Unity.WebRTC.Runtime.asmdef
@@ -2,6 +2,7 @@
     "name": "Unity.WebRTC",
     "references": [],
     "includePlatforms": [
+        "Android",
         "Editor",
         "iOS",
         "LinuxStandalone64",
