--- a/Tests/Runtime/Unity.WebRTC.RuntimeTests.asmdef
+++ b/Tests/Runtime/Unity.WebRTC.RuntimeTests.asmdef
@@ -6,6 +6,7 @@
         "UnityEditor.TestRunner"
     ],
     "includePlatforms": [
+        "Android",
         "Editor",
         "iOS",
         "LinuxStandalone64",
